# HeimaFrameWork

./: .gitignore  AGENTS.md  JETSON_BUILD_STEPS.md  JETSON_CMAKE_FIX.md  JETSON_COMPILE_DRIVER.md  JETSON_COPY_LIST.md  PROGRESS_TRACKER.html  README.md  code-changes.txt
.agents/rules/: code-style.md
.sisyphus/plans/: loong-base-heima-driver-bringup.md
heimaSDK/: AGENTS.md  CMakeLists.txt  CMakeLists_NEW.txt  DATAFLOW.md  Ethercat_doc.txt  MT-Device_260224.xml  can.cpp  can.h  common.h  config.xml  config_leg.xml  ecat.cpp  ecat.h  extract_pdf.py  heima_driver_sdk.cpp  heima_driver_sdk.h  mt_torque_demo.cpp  rs485.cpp  rs485.h  test_ankle_hardware.cpp  triple_buffer_visualization.html  udp_cmd.py  whole_body_position_test.cpp  whole_body_pvt_simple.cpp  whole_body_pvt_test.cpp  whole_body_smoke_test.cpp  yesense_imu.cpp  yesense_sdk_test.cpp  代码规范.md  框架结构.md
heimaSDK/docs/: ARCHITECTURE_ANALYSIS.md  BUG_REPORT_TRIPLE_BUFFER_FRAME_TEARING.md  ECAT_DOMAIN_FLOW.md  ECAT_FULL_FLOW.md  ECAT_TRIPLE_BUFFER_FLOW.md  TASK_SHARED_MEM_FLOW.md  WHOLE_BODY_TEST_FLOW.md  YESENSE_SDK_TEST_FLOW.md  loong_base_audit.md  loong_base_reaudit.md  tearing_demo.html
heimaSDK/web_control/: AGENTS.md  CMakeLists.txt  run_server.sh  web_server.py  whole_body_web_control.cpp
heimaSDK/web_control/static/: index.html
heimaSDK/yesense/src/: imu_serial_test.cpp  yesense_decoder.cpp  yesense_node.cpp
heimaSDK_copy/: AGENTS.md  CMakeLists.txt  DATAFLOW.md  ECAT_FULL_FLOW.md  ECAT_RXTX_DEBUG_FLOW.md  PYTHON_VISUALIZATION.md  arm_mirror_demo.cpp  arm_smoke_test.cpp  arm_traj_demo.cpp  build.sh  common.cpp  common.h  config.xml  config_xml.cpp  config_xml.h  driver_test.cpp  ecat.cpp  ecat_domain_probe  ecat_domain_probe.cpp  heima_driver_sdk.cpp  heima_driver_sdk.h  heima_sdk_c_api.cpp  heima_sdk_c_api.h  leg_smoke_test.cpp  mirror_demo.cpp  mt_torque_demo.cpp  robot_multi_joint_api.c  rs232.cpp  rs232.h  single_motor_demo  single_motor_demo.cpp  whole_body_smoke_test.cpp  yesense_imu.h
heimaSDK_copy/python/: visualize_status.py
heimaSDK_copy/yesense/src/: yesense_decoder.h  yesense_decoder_comm.h  yesense_std_out_decoder.cpp  yesense_std_out_decoder.h
heima_rl_deploy/: CMakeLists.txt  README.md  ankle_sinewave.cpp  build.sh  convert_pytorch_to_onnx.py  imu_test.cpp  main.cpp  onnx_wrapper.h  single_motor_demo_ankle_test.cpp  single_motor_demo_pd_mode.cpp  single_motor_demo_pos_mode.cpp  single_motor_demo_torque_mode.cpp  test_onnx.cpp  timer_test  timer_test.cpp
heima_rl_deploy/ankle_solver/: solve_ankle_v3.py
heima_rl_deploy/ankle_solver/cpp/: CMakeLists.txt  README.md  ankle_solver.cpp  ankle_solver.h  main.cpp
heima_rl_deploy/checkpoints/: policy_1.pt  policy_1_0127.onnx  policy_1_0131.onnx  policy_s.onnx
heima_simulator/: AGENTS.md
heima_simulator/ankle_visualizer/: index.html  math_visualizer.html
heima_simulator/code/: CMakeLists.txt  QUICKSTART.md  README.md  change_motors.py  main.cpp  main_csp.cpp  onnx_wrapper.cpp  robot_interface.cpp  robot_interface.h  robot_interface_real.cpp  robot_interface_real.h  robot_interface_sim.cpp  robot_interface_sim.h
heima_simulator/code/ankle_solver/: solve_ankle.py  solve_ankle_v2.py  solve_ankle_v3.py
heima_simulator/code/ankle_solver/cpp/: ankle_solver.cpp  ankle_solver.h  main.cpp  test_ankle
heima_simulator/code/checkpoints/: extract_pd_gains.py  policy_1.onnx  policy_1_0127.pt  policy_1_0128.onnx
heima_simulator/code/checkpoints/v1/: config.yaml  model_18700.onnx
heima_simulator/code/checkpoints/v2/: 2026-02-22_12-59-43.onnx  config.yaml  model0223.onnx
heima_simulator/code/checkpoints/v3/: config.yaml  model_15550.onnx  model_29999.onnx
heima_simulator/code/checkpoints/v4/: model_1650.onnx  model_3100.onnx  model_5550.onnx
heima_simulator/code/checkpoints/v5/: config.yaml  model_3250.onnx  model_500.onnx  model_850.onnx
heima_simulator/code/checkpoints/v6/: config.yaml  walk0226.onnx
heima_simulator/code/checkpoints/v7/: config.yaml  walk0225.onnx
heima_simulator/code/checkpoints/v8/: config.yaml  walk0226v2.onnx
heima_simulator/code/logs/: observations_log.csv  observations_log_2.csv  visualize_observations.py
heima_simulator/code/proto/: build.sh  mujoco_service.pb.cc  mujoco_service.pb.h  mujoco_service.proto
heima_simulator/funny/: seeactivation.py
heima_simulator/scripts/: visualize_observations.py
heima_simulator/test_example/: README.md  build.sh  grpc_client_minimal  grpc_client_minimal.cpp  mujoco_service.grpc.pb.cc  mujoco_service.grpc.pb.h  mujoco_service.pb.cc  mujoco_service.pb.h
loong_base-main/: AGENTS.md  CMakeLists.txt
loong_base-main/config/: config.xml
loong_base-main/tools/: safe_clear_log.sh
loong_ctrl_locomotion-main/: AGENTS.md  CMakeLists.txt  NOTICE  readme.md
loong_ctrl_locomotion-main/src/common/: swing_arm.h
loong_ctrl_locomotion-main/src/manager/: fsm.cpp  fsm.h  manager.cpp  manager.h  nabo.cpp  nabo_data.h  plan.cpp  plan.h
loong_ctrl_locomotion-main/src/plan/: plan_com_test.cpp  plan_com_test.h  plan_recover.cpp  plan_recover.h  plan_rl.cpp  plan_rl.h  plan_sss.cpp  plan_sss.h
loong_ctrl_locomotion-main/src/rl/: onnx.cpp  onnx.h  thread_loop.h  thread_loop.hxx
loong_ctrl_locomotion-main/src/robot/: robot_config.h
loong_ctrl_locomotion-main/test/: main.cpp  main.h
loong_ctrl_locomotion-main/tools/: make.sh  update_lib.sh
loong_sim-main/: AGENTS.md
loong_sim_sdk_release-main/: AGENTS.md  license  readme.md
loong_sim_sdk_release-main/py_jnt/: onnx_runner_lq.py  onnx_runner_yyp.py  test_.py  test_jnt.py  test_onnx.py
loong_sim_sdk_release-main/py_mani/: test_.py
loong_sim_sdk_release-main/sdk/loong_jnt_sdk/: loong_jnt_sdk_datas.py  loong_jnt_sdk_shm.py  loong_jnt_sdk_udp.py
loong_sim_sdk_release-main/tools/: py_ui.py  run_driver.sh  run_interface.sh  run_locomotion.sh  run_manipulation.sh  run_sim.sh
loong_utility-main/: AGENTS.md  NOTICE  loong_utility.cmake  readme.md
loong_utility-main/src/: algorithms.cpp  algorithms.h  eigen.h  ini.cpp  ini.h  iopack.h  iopack.hxx  log.cpp  log.h  pInv.h  timing.cpp  timing.h  udp.cpp  udp.h
(+1 files in other folders)
